--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.9"
 openai = "^1.12.0"
 httpx = "^0.26.0"
+pydantic = "^2.6.2"
 
 [build-system]
 requires = ["poetry-core"]
