--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "iudex"
-version = "0.2.10"
+version = "0.3.0"
 description = ""
 authors = ["Drake Wong <drake@iudex.ai>"]
 readme = "README.md"
@@ -10,6 +10,12 @@ python = "^3.9"
 openai = "^1.12.0"
 httpx = "^0.26.0"
 pydantic = "^1.0.0"
+opentelemetry-distro = "^0.45b0"
+opentelemetry-instrumentation-fastapi = "^0.45b0"
+opentelemetry-exporter-otlp-proto-http = "^1.24.0"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.2.0"
 
 [build-system]
 requires = ["poetry-core"]
