--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ opentelemetry-exporter-otlp-proto-http = "^1.24.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.0"
+python-dotenv = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
