--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,15 @@
 [tool.poetry]
 name = "iudex"
-version = "0.5.1"
+version = "0.5.2"
 description = ""
 authors = ["Drake Wong <drake@iudex.ai>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-opentelemetry-distro = "^0.45b0"
-opentelemetry-instrumentation-fastapi = "^0.45b0"
-opentelemetry-exporter-otlp-proto-http = "^1.20.0"
+opentelemetry-distro = "~0"
+opentelemetry-instrumentation-fastapi = "~0"
+opentelemetry-exporter-otlp-proto-http = "~1"
 
 [tool.poetry.group.dev.dependencies]
 python-dotenv = "^1.0.1"
