--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,22 @@
 [tool.poetry]
 name = "iudex"
-version = "0.5.2"
+version = "0.5.4"
 description = ""
 authors = ["Drake Wong <drake@iudex.ai>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-opentelemetry-distro = "~0"
-opentelemetry-instrumentation-fastapi = "~0"
-opentelemetry-exporter-otlp-proto-http = "~1"
+opentelemetry-exporter-otlp-proto-http = "1.20.0"
+opentelemetry-instrumentation-fastapi = "0.41b0"
+opentelemetry-distro = "0.41b0"
 
 [tool.poetry.group.dev.dependencies]
 python-dotenv = "^1.0.1"
+fastapi = "<0.111"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.2.0"
-fastapi = "^0.111.0"
 
 [build-system]
 requires = ["poetry-core"]
