--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,19 @@
 [tool.poetry]
 name = "iudex"
-version = "0.5.4"
+version = "0.5.5"
 description = ""
 authors = ["Drake Wong <drake@iudex.ai>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-opentelemetry-exporter-otlp-proto-http = "1.20.0"
-opentelemetry-instrumentation-fastapi = "0.41b0"
-opentelemetry-distro = "0.41b0"
+opentelemetry-exporter-otlp-proto-http = "^1.20.0"
+opentelemetry-instrumentation-fastapi = "^0.41b0"
+opentelemetry-distro = "^0.41b0"
 
 [tool.poetry.group.dev.dependencies]
 python-dotenv = "^1.0.1"
-fastapi = "<0.111"
+fastapi = "^0.110"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.2.0"
