--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,25 @@
 [tool.poetry]
 name = "iudex"
-version = "0.6.1"
+version = "0.7.0"
 description = ""
 authors = ["Drake Wong <drake@iudex.ai>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-opentelemetry-exporter-otlp-proto-http = "^1.20.0"
-opentelemetry-instrumentation-fastapi = "^0.41b0"
-opentelemetry-distro = "^0.41b0"
+opentelemetry-exporter-otlp-proto-http = "^1.25.0"
+opentelemetry-distro = "^0.46b0"
+opentelemetry-instrumentation-fastapi = "^0.46b0"
+opentelemetry-instrumentation-openai = "^0.22.0"
+opentelemetry-instrumentation-psycopg2 = "^0.46b0"
 
 [tool.poetry.group.dev.dependencies]
 python-dotenv = "^1.0.1"
-fastapi = "^0.110"
 
 [tool.poetry.group.test.dependencies]
 pytest = "^8.2.0"
+openai = "^1.33.0"
+fastapi = {extras = ["all"], version = "^0.111.0"}
 
 [build-system]
 requires = ["poetry-core"]
