--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "iudex"
-version = "0.7.4"
+version = "0.7.5"
 description = ""
 authors = ["Drake Wong <drake@iudex.ai>"]
 readme = "README.md"
@@ -10,10 +10,11 @@ python = "^3.9"
 opentelemetry-exporter-otlp-proto-http = "^1.25.0"
 opentelemetry-distro = "^0.46b0"
 opentelemetry-instrumentation-fastapi = "^0.46b0"
-opentelemetry-instrumentation-openai = "^0.22.0"
 opentelemetry-instrumentation-psycopg2 = "^0.46b0"
 wrapt = "^1.16.0"
 opentelemetry-instrumentation-sqlalchemy = "^0.46b0"
+opentelemetry-semantic-conventions-ai = "^0.3.1"
+tiktoken = "^0.7.0"
 
 [tool.poetry.group.dev.dependencies]
 python-dotenv = "^1.0.1"
