--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "iudex"
-version = "0.9.2"
+version = "0.9.3"
 description = ""
 authors = ["Drake Wong <drake@iudex.ai>"]
 readme = "README.md"
@@ -88,6 +88,7 @@ pytest = "^8.2.0"
 openai = "^1.33.0"
 fastapi = {extras = ["all"], version = "^0.111.0"}
 supabase = "^2.5.1"
+modal = "^0.63.12"
 
 [build-system]
 requires = ["poetry-core"]
