--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "iudex"
-version = "0.9.10"
+version = "0.9.11"
 description = ""
 authors = ["Drake Wong <drake@iudex.ai>"]
 readme = "README.md"
@@ -11,6 +11,7 @@ opentelemetry-exporter-otlp-proto-http = "^1.25.0"
 opentelemetry-distro = "^0.46b0"
 wrapt = "^1.16.0"
 opentelemetry-semantic-conventions-ai = "^0.3.1"
+tiktoken = "^0.3.3"
 # opentelemetry-contrib-instrumentation
 # should just be the main package, but one dep is broken: https://github.com/open-telemetry/opentelemetry-python-contrib/issues/2053
 opentelemetry-instrumentation-aio-pika = "^0.46b0"
@@ -69,7 +70,6 @@ opentelemetry-instrumentation-llamaindex = "^0.23.0"
 opentelemetry-instrumentation-milvus = "^0.23.0"
 opentelemetry-instrumentation-mistralai = "^0.23.0"
 opentelemetry-instrumentation-ollama = "^0.23.0"
-opentelemetry-instrumentation-openai = "^0.23.0"
 opentelemetry-instrumentation-pinecone = "^0.23.0"
 opentelemetry-instrumentation-qdrant = "^0.23.0"
 opentelemetry-instrumentation-replicate = "^0.23.0"
