--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "iudex"
-version = "0.11.0"
+version = "0.11.1"
 description = ""
 authors = ["Drake Wong <drake@iudex.ai>"]
 readme = "README.md"
@@ -87,6 +87,7 @@ openai = "^1.33.0"
 fastapi = {extras = ["all"], version = "^0.111.0"}
 supabase = "^2.5.1"
 modal = "^0.63.12"
+guardrails-ai = "^0.5.2"
 
 [build-system]
 requires = ["poetry-core"]
