--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
 name = "iudex"
-version = "0.11.1"
+version = "0.12.0"
 description = ""
 authors = ["Drake Wong <drake@iudex.ai>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.9,!=3.9.7"
 opentelemetry-exporter-otlp-proto-http = "^1.25.0"
 opentelemetry-distro = "^0.46b0"
 wrapt = "^1.16.0"
@@ -87,7 +87,8 @@ openai = "^1.33.0"
 fastapi = {extras = ["all"], version = "^0.111.0"}
 supabase = "^2.5.1"
 modal = "^0.63.12"
-guardrails-ai = "^0.5.2"
+guardrails-ai = "^0.5.4"
+streamlit = "^1.37.1"
 
 [build-system]
 requires = ["poetry-core"]
